# iced-baseplug-examples

./: Cargo.toml  README.md
gain/: Cargo.toml
gain/src/: lib.rs  ui.rs
gain/src/ui/: mod.rs  style.rs
monosynth/: Cargo.toml
monosynth/src/: lib.rs  ui.rs
