[package]
name = "iced-baseplug-examples"
version = "0.1.0"
authors = ["Billy Messenger <BillyDM@protonmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members =[
    "gain",
    "monosynth",
]

[dependencies]
