[package]
name = "monosynth"
version = "0.1.0"
authors = ["Billy Messenger <BillyDM@protonmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
baseplug = { git = "https://github.com/wrl/baseplug.git", branch="trunk" }
iced_audio = { git = "https://github.com/BillyDM/iced_audio", branch="iced_git" }
iced_baseview = { git = "https://github.com/BillyDM/iced_baseview.git", branch = "master" }
iced_native = { git = "https://github.com/hecrj/iced.git", branch = "master" }
baseview = { git = "https://github.com/RustAudio/baseview.git", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
raw-window-handle = "0.3"
vst = "0.2"